syntax = "proto3";

import "google/api/annotations.proto";

package Billboard;

service Board {
  rpc ShowMessage (MessageRequest) returns (MessageReply) {
      option (google.api.http) = {
      get: "/v1/message/{sender}"
    };
  }
}


message MessageRequest {
  string sender = 1;
}

message MessageReply {
  string receive_from = 1;
  int64 display_time = 2;
}
